--- a/spirituality.html
+++ b/spirituality.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> Meliorate-Change towards greatness </title>
+  <title> Business </title>
 </head>
 <style>
 {
@@ -22,7 +22,7 @@ background-size: cover;
 position: relative;
 }
 
-.header {background-color: #2196F3;
+.header {background-color: ;
 padding: 20px;
 text-align: center;
 }
@@ -55,18 +55,6 @@ border-radius: 3px;
 { margin-left: 8px;
 }
 
-.btn{
-  padding: 10px 20px;
-  border: 0;
-  background:yellow;
-  font-weight: bold;
-  cursor: pointer;
-}
-
-.menu-bar .btn{
-  float: left;
-}
-
 #mySidenav a {
 position: absolute;
 left: -140px;
@@ -82,7 +70,7 @@ border-radius: 0 5px 5px 0;
 left: 0;
 }
 #about {
-top: 200px;
+top: 210px;
 background-color: #f44336;
 }
 #blog {
@@ -98,43 +86,34 @@ top: 500px;
 background-color: #4CAF50;
 }
 
-#PV {
-top: 600px;
-background-color: #555;
-}
-#Me {
-top: 700px;
-background-color: #f44336;
-}
-
 </style>
 <body>
 
   <div class="header">
-    <h1> Upbringing </h1>
+    <h1> Spirituality </h1>
+    <p>Spiritually awaken is greatest essence acheived by human being, and without getting into it human won't be able to feel true existence.</p>
+
 
 
   <p>  </p>
   </div>
 <div class="menu-bar">
   <ul>
-  <button type="button" class="btn">Meliorate</button>
-  <li ><a href="spirituality.html"> Spirituality</a> </li>
-  <li><a href="science.html">Science</a> </li>
-    <li><a href="upbringing.html">Upbringing</a> </li>
-  <li><a href="phillosophy.html">Phillosophy</a> </li>
-  <li><a href="business.html">Busines </a></li>
-  <button type="button" class="btn" >Pharma Vision</button>
+
+  <li ><a href="spirituality.html"> Spirituality </a> </li>
+  <li><a href="science.html">Spiritual Leader</a> </li>
+    <li><a href="phillosophy.html">Big picture</a> </li>
+  <li><a href="business.html">Modern spirituality</a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">Meliorate </a>
-  <a href="pharmavision.html" id="blog">Pharma Vision</a>
-  <a href="smallbreak.html" id="projects">Small Break</a>
-  <a href="thinkingpot.html" id="contact">Think pot</a>
-  <a href="journeythroughgreatpeoplesmind.html" id="PV">Journey </a>
-  <a href="#" id="Me">I-Feed</a>
+  <a href="meliorate.html" id="about">Journey </a>
+  <a href="pharmavision.html" id="blog">Books</a>
+  <a href="smallbreak.html" id="projects">Courses</a>
+  <a href="thinkingpot.html" id="contact">Use</a>
+
 </div>
+
 
 </Body>
 </html>
