change in width

--- a/Entranceexam.html
+++ b/Entranceexam.html
@@ -108,10 +108,10 @@ background-color: #4CAF50;
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">EPE </a>
-  <a href="pharmavision.html" id="blog">Gov. Exam</a>
-  <a href="smallbreak.html" id="projects">MBA EE</a>
-  <a href="thinkingpot.html" id="contact">Others</a>
+  <a href="#" id="about">EPE </a>
+  <a href="#" id="blog">Gov. Exam</a>
+  <a href="#" id="projects">MBA EE</a>
+  <a href="#" id="contact">Others</a>
 
 </div>
 
