--- a/business.html
+++ b/business.html
@@ -99,17 +99,17 @@ background-color: #4CAF50;
 <div class="menu-bar">
   <ul>
 
-  <li ><a href="spirituality.html"> History</a> </li>
-  <li><a href="science.html">Future</a> </li>
-    <li><a href="phillosophy.html">Big Picture</a> </li>
-  <li><a href="business.html">Current status </a></li>
+  <li ><a href="#"> History</a> </li>
+  <li><a href="#">Future</a> </li>
+    <li><a href="#">Big Picture</a> </li>
+  <li><a href="#">Current status </a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">B. psychology </a>
-  <a href="pharmavision.html" id="blog">B. phillosophy</a>
-  <a href="smallbreak.html" id="projects">Small business</a>
-  <a href="thinkingpot.html" id="contact">Game changer</a>
+  <a href="#" id="about">B. psychology </a>
+  <a href="#" id="blog">B. phillosophy</a>
+  <a href="#" id="projects">Small business</a>
+  <a href="#" id="contact">Game changer</a>
 
 </div>
 
