--- a/meliorate.html
+++ b/meliorate.html
@@ -1,23 +1,118 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title> My Meliorate Website </title>
-  <link rel="stylesheet" href="Style.css">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <title> Business </title>
 </head>
-<body>
-  <div class="menu-bar">
+<style>
+{
+padding:0;
+margin:0;
+}
 
+
+
+body
+{
+background-image: url(Background.jpg);
+background-color: #cccccc;
+height: 500px;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
+}
+
+.header {background-color: ;
+padding: 20px;
+text-align: center;
+}
+.menu-bar
+{
+background: rgb(50, 100, 0);
+text-align: center;
+}
+.menu-bar ul
+{
+display: inline-flex;
+list-style: none;
+color: #fff
+}
+.menu-bar ul li
+{
+width:auto;
+margin: 5px;
+padding: 10px;
+}
+.menu-bar ul li a
+{text-decoration: none;
+color: #fff}
+.active, .menu-bar ul li:hover
+{
+background: #2bab0d;
+border-radius: 3px;
+}
+.menu-bar .fa
+{ margin-left: 8px;
+}
+
+#mySidenav a {
+position: absolute;
+left: -140px;
+transition: 0.3s;
+padding: 15px;
+width: 150px;
+text-decoration: none;
+font-size: 20px;
+color: white;
+border-radius: 0 5px 5px 0;
+}
+#mySidenav a:hover {
+left: 0;
+}
+#about {
+top: 210px;
+background-color: #f44336;
+}
+#blog {
+top: 300px;
+background-color: #555;
+}
+#projects {
+top: 400px;
+background-color: #2196F3;
+}
+#contact {
+top: 500px;
+background-color: #4CAF50;
+}
+
+</style>
+<body>
+
+  <div class="header">
+    <h1> Meliorate </h1>
+
+
+
+  <p>  </p>
+  </div>
+<div class="menu-bar">
   <ul>
-  <li><a href="Upbringing\ upbringing.html"> Upbringing </a></li>
-  <li ><a href="Spirituality\ spirituality.html"></i> Spirituality</a> </li>
-  <li><a href="Science\ science.html">Science</a> </li>
-  <li><a href="Phillosophy\ phillosophy.html"></i>Phillosophy</a> </li>
-  <li><a href="Business\ business.html"></i>Busines </a></li>
-  <li><a href="Journey Through great peoples mind\ journeythroughgreatpeoplesmind.html">Journey Through great peoples mind </a></li>
-  <li><a href="Meliorate flow chart\ meliorateflowchart.html"></i>Meliorate flow chart</a> </li>
-  <li><a href="Small Break\ smallbreak.html"></i>Small Break</a> </li>
-  <li><a href="Thinking pot\ thinkingpot.html"></i>Thinking pot</a> </li>
+
+  <li ><a href="upbringing.html"> Upbringing</a> </li>
+  <li><a href="spirituality.html">Spirituality</a> </li>
+    <li><a href="science.html">Science</a> </li>
+  <li><a href="phillosophy.html">Phillosophy </a></li>
 </div>
+
+<div id="mySidenav" class="sidenav">
+  <a href="#" id="about">a </a>
+  <a href="#" id="blog">b</a>
+  <a href="#" id="projects">c</a>
+  <a href="#" id="contact">d</a>
+
+</div>
+
+
 </Body>
 </html>
