--- a/pharmavision.html
+++ b/pharmavision.html
@@ -100,17 +100,17 @@ background-color: #4CAF50;
 <div class="menu-bar">
   <ul>
 
-  <li ><a href="spirituality.html"> Academic</a> </li>
-  <li><a href="science.html">Career</a> </li>
-    <li><a href="phillosophy.html">Entrance exam</a> </li>
-  <li><a href="business.html">LTE-HL </a></li>
+  <li ><a href="#"> Academic</a> </li>
+  <li><a href="#">Career</a> </li>
+    <li><a href="#">Entrance exam</a> </li>
+  <li><a href="#">LTE-HL </a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">LTE </a>
-  <a href="pharmavision.html" id="blog">Healthcare</a>
-  <a href="smallbreak.html" id="projects">Pharma Business</a>
-  <a href="thinkingpot.html" id="contact">Research</a>
+  <a href="#" id="about">LTE </a>
+  <a href="#" id="blog">Healthcare</a>
+  <a href="#" id="projects">Pharma Business</a>
+  <a href="#" id="contact">Research</a>
 
 </div>
 
