--- a/spirituality.html
+++ b/spirituality.html
@@ -100,17 +100,17 @@ background-color: #4CAF50;
 <div class="menu-bar">
   <ul>
 
-  <li ><a href="spirituality.html"> Spirituality </a> </li>
-  <li><a href="science.html">Spiritual Leader</a> </li>
-    <li><a href="phillosophy.html">Big picture</a> </li>
-  <li><a href="business.html">Modern spirituality</a></li>
+  <li ><a href="#"> Spirituality </a> </li>
+  <li><a href="#">Spiritual Leader</a> </li>
+    <li><a href="#">Big picture</a> </li>
+  <li><a href="#">Modern spirituality</a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">Journey </a>
-  <a href="pharmavision.html" id="blog">Books</a>
-  <a href="smallbreak.html" id="projects">Courses</a>
-  <a href="thinkingpot.html" id="contact">Use</a>
+  <a href="#" id="about">Journey </a>
+  <a href="#" id="blog">Books</a>
+  <a href="#" id="projects">Courses</a>
+  <a href="#" id="contact">Use</a>
 
 </div>
 
