--- a/science.html
+++ b/science.html
@@ -99,17 +99,17 @@ background-color: #4CAF50;
 <div class="menu-bar">
   <ul>
 
-  <li ><a href="spirituality.html"> History</a> </li>
-  <li><a href="science.html">Future</a> </li>
-    <li><a href="phillosophy.html">Phillophers</a> </li>
-  <li><a href="business.html">Phillosophy</a></li>
+  <li ><a href="#"> History</a> </li>
+  <li><a href="#">Future</a> </li>
+    <li><a href="#">Phillophers</a> </li>
+  <li><a href="#">Phillosophy</a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">Journey </a>
-  <a href="pharmavision.html" id="blog">Books</a>
-  <a href="smallbreak.html" id="projects">Courses</a>
-  <a href="thinkingpot.html" id="contact">Use</a>
+  <a href="#" id="about">Journey </a>
+  <a href="#" id="blog">Books</a>
+  <a href="#" id="projects">Courses</a>
+  <a href="#" id="contact">Use</a>
 
 </div>
 
