--- a/smallbreak.html
+++ b/smallbreak.html
@@ -100,17 +100,17 @@ background-color: #4CAF50;
 <div class="menu-bar">
   <ul>
 
-  <li ><a href="spirituality.html"> Education world</a> </li>
-  <li><a href="science.html">Carporate world</a> </li>
-    <li><a href="phillosophy.html">Thinking pot</a> </li>
-  <li><a href="business.html">I-feed</a></li>
+  <li ><a href="#"> Education world</a> </li>
+  <li><a href="#">Carporate world</a> </li>
+    <li><a href="#">Thinking pot</a> </li>
+  <li><a href="#">I-feed</a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">Journey </a>
-  <a href="pharmavision.html" id="blog">Books</a>
-  <a href="smallbreak.html" id="projects">Courses</a>
-  <a href="thinkingpot.html" id="contact">Use</a>
+  <a href="#" id="about">Journey </a>
+  <a href="#" id="blog">Books</a>
+  <a href="#" id="projects">Courses</a>
+  <a href="#" id="contact">Use</a>
 
 </div>
 
