--- a/thinkingpot.html
+++ b/thinkingpot.html
@@ -100,17 +100,17 @@ background-color: #4CAF50;
 <div class="menu-bar">
   <ul>
 
-  <li ><a href="spirituality.html"> science  </a> </li>
-  <li><a href="science.html">History </a></li>
-    <li><a href="phillosophy.html">phillosophy</a> </li>
-  <li><a href="business.html"> Reseacrh</a></li>
+  <li ><a href="#"> science  </a> </li>
+  <li><a href="#">History </a></li>
+    <li><a href="#">phillosophy</a> </li>
+  <li><a href="#"> Reseacrh</a></li>
 </div>
 
 <div id="mySidenav" class="sidenav">
-  <a href="meliorate.html" id="about">Thinkers </a>
-  <a href="pharmavision.html" id="blog">Books</a>
-  <a href="smallbreak.html" id="projects">Courses</a>
-  <a href="thinkingpot.html" id="contact">Use</a>
+  <a href="#" id="about">Thinkers </a>
+  <a href="#" id="blog">Books</a>
+  <a href="#" id="projects">Courses</a>
+  <a href="#" id="contact">Use</a>
 
 </div>
 
