--- a/upbringing.html
+++ b/upbringing.html
@@ -1,97 +1,119 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-<title> Pharma Vision Layout </title>
-<meta charset="utf-8">
-<meta name="viewport"
-content="width=device-width, initial-scale=1">
+  <title> Business </title>
+</head>
 <style>
-*{box-sizing: border-box;
+{
+padding:0;
+margin:0;
 }
-body { margin: 0;
+
+
+
+body
+{
+background-image: url(Background.jpg);
+background-color: #cccccc;
+height: 500px;
+background-position: center;
+background-repeat: no-repeat;
+background-size: cover;
+position: relative;
 }
-/*Style the header*/
-.header {background-color: #f1f1f1;
+
+.header {background-color: ;
 padding: 20px;
 text-align: center;
 }
-/* Style the top navigation bar */
-.topnav {
-overflow: hidden;
-background-color: #333;
-}
-/* Style the topnav links */
-.topnav a {
-float: left;
-display: block;
-color: #f2f2f2;
-text-align: center;
-padding: 14px 16px;
-text-decoration: none;
-}
-/* Change color on hover */
-.topnav a:hover {
-background-color: #ddd;
-color: Blue;
-}
-/* Create Three equal columns that floats next to
- each other */
-.column {
-float: left;
-width: 33.33%;
-padding: 15px;
-}
-/* Clear floats after the columns*/
-.row:after {
-content: "";
-display: table;
-clear: both;
-}
-/* Responsive layout - makes the three columns
-stack on top of each other instead of next to
- each other */
-@media screen and (max width: 600px)
+.menu-bar
 {
-.column { width: 100%;
+background: rgb(50, 100, 0);
+text-align: center;
 }
+.menu-bar ul
+{
+display: inline-flex;
+list-style: none;
+color: #fff
 }
+.menu-bar ul li
+{
+width: 100px;
+margin: 5px;
+padding: 10px;
+}
+.menu-bar ul li a
+{text-decoration: none;
+color: #fff}
+.active, .menu-bar ul li:hover
+{
+background: #2bab0d;
+border-radius: 3px;
+}
+.menu-bar .fa
+{ margin-left: 8px;
+}
+
+#mySidenav a {
+position: absolute;
+left: -140px;
+transition: 0.3s;
+padding: 15px;
+width: 150px;
+text-decoration: none;
+font-size: 20px;
+color: white;
+border-radius: 0 5px 5px 0;
+}
+#mySidenav a:hover {
+left: 0;
+}
+#about {
+top: 210px;
+background-color: #f44336;
+}
+#blog {
+top: 300px;
+background-color: #555;
+}
+#projects {
+top: 400px;
+background-color: #2196F3;
+}
+#contact {
+top: 500px;
+background-color: #4CAF50;
+}
+
 </style>
-</head>
 <body>
-<div class="header">
-  <h1> Upbringing </h1>
-<p> Journey of bringing dreams into reality </p>
+
+  <div class="header">
+    <h1> Upbringing</h1>
+    <p>Journey of bringing dreams into reality</p>
+
+
+
+  <p>  </p>
+  </div>
+<div class="menu-bar">
+  <ul>
+
+  <li ><a href="#"> Primary Education  </a> </li>
+  <li><a href="#">Higher Education </a></li>
+    <li><a href="#">Pharma Vision</a> </li>
+  <li><a href="#"> Career</a></li>
 </div>
-<div class="topnav">
-<a href="Essential Learning\ essentiallearning.html"> Essential Learning </a>
-<a href="Financial skills\ financialskills.html"> Financial skills </a>
-<a href="Higher Education\ highereducation.html"> Higher Education </a>
-<a href="Pharma Vision\ pharmavision.html"> Pharma Vision </a>
-<a href="Primary Education\ primaryeducation.html"> Primary Education </a>
-<a href="Soft skills\ softskills.html"> Soft skills </a>
-<a href="Life mastery\ lifemastery.html"> Life Mastery </a>
-</div>
-<div class="row">
-<div class="column">
-<h2> All about Vision Track </h2>
+
+<div id="mySidenav" class="sidenav">
+  <a href="#" id="about">Financial skills </a>
+  <a href="#" id="blog">Essential Learning</a>
+  <a href="#" id="projects">Soft skill</a>
+  <a href="#" id="contact"> Life Mastery</a>
 
 </div>
 
-<div class="column">
-<h2> upbringing vision framework </h2>
 
-</div>
-
-<div class="column">
-<h2> Rest </h2>
-<p>
-<Li> Advertisement </Li>
-<Li> Current research </Li>
-<Li> Magazine </Li>
-</p>
-</div>
-</div>
-
-
-</body>
+</Body>
 </html>
