--- a/pharmavision.html
+++ b/pharmavision.html
@@ -39,7 +39,7 @@ color: #fff
 }
 .menu-bar ul li
 {
-width: 100px;
+width: auto;
 margin: 5px;
 padding: 10px;
 }
@@ -102,7 +102,7 @@ background-color: #4CAF50;
 
   <li ><a href="#"> Academic</a> </li>
   <li><a href="#">Career</a> </li>
-    <li><a href="#">Entrance exam</a> </li>
+    <li><a href="Entranceexam.html">Entrance exam</a> </li>
   <li><a href="#">LTE-HL </a></li>
 </div>
 
