--- a/upbringing.html
+++ b/upbringing.html
@@ -39,7 +39,7 @@ color: #fff
 }
 .menu-bar ul li
 {
-width: 100px;
+width: auto;
 margin: 5px;
 padding: 10px;
 }
@@ -102,7 +102,7 @@ background-color: #4CAF50;
 
   <li ><a href="#"> Primary Education  </a> </li>
   <li><a href="#">Higher Education </a></li>
-    <li><a href="#">Pharma Vision</a> </li>
+    <li><a href="pharmavision.html">Pharma Vision</a> </li>
   <li><a href="#"> Career</a></li>
 </div>
 
